anneal/tests/fixtures/edge_cases_logic/test_5_4_std_types/expected.stderr
  × Function expected at
  │   Vec
  │ but this term has type
  │   ?m.1
  │ 
  │ Note: Expected a function because this term is being applied to the
  │ argument
  │   Std.U32
  │ 
  │ Hint: The identifier `Vec` is unknown, and Lean's `autoImplicit` option
  │ causes an unknown identifier to be treated as an implicitly bound variable
  │ with an unknown type. However, the unknown type cannot be a function, and
  │ a function is what Lean expects here. This is often the result of a typo
  │ or a missing `import` or `open` statement.
   ╭─[[PROJECT_ROOT]/src/lib.rs:3:23]
 2 │ /// ```lean, anneal, spec
 3 │ /// theorem spec (v : Vec Std.U32) (s : String) :
   ·                       ─────┬─────
   ·                            ╰── here
 4 │ ///   Aeneas.Std.WP.spec (std_types v s) (fun ret_ => True) := by
   ╰────

Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
